# QueryMind

./: README.md  app.py  pyproject.toml  requirements.txt
app_pages/: home.py
scripts/: config.py  utils.py
static/: styles.css
